integration cpu on game for challenge ai, next integration --> cpu Attempt on view